--- a/frontend/src/screen.css
+++ b/frontend/src/screen.css
@@ -10,6 +10,11 @@
     .leftBody{
         margin-left: 0px;
     }
+    .title {
+        overflow: hidden;
+        white-space: nowrap;
+        text-overflow: ellipsis;
+    }
 }
 
 /* Medium devices (landscape tablets, 768px and up) */
